Changelog for Alias (v1.1.2-SNAPSHOT)

2012-08-06 00:30:24 +0100    update to AbstractPlugin and new frameworks (James Richardson)

v1.1.1
2012-08-02 09:52:42 +0100    prepare config for release (James Richardson)

v1.1.0
2012-08-02 09:37:23 +0100    now using parent pom (James Richardson)
2012-08-02 09:26:24 +0100    fix MissingKeyException (James Richardson)
2012-08-02 09:23:55 +0100    really fixed it this time (James Richardson)
2012-08-02 09:13:32 +0100    Fix NPE in PreLoginEvent (James Richardson)
2012-07-29 18:07:25 +0100    preparing for snapshot testing (James Richardson)
2012-07-29 13:33:41 +0100    remove unused import (James Richardson)
2012-07-29 02:12:36 +0100    preparing for release (James Richardson)
2012-07-29 00:23:15 +0100    Allow usage from console (James Richardson)
2012-07-29 00:20:35 +0100    added Metrics - changed from LoginEvent to PreLoginEvent (James Richardson)
2012-07-28 23:17:18 +0100    add MetricsListener (James Richardson)
2012-07-07 05:20:58 +0100    fix NPE when initalising handler before plugin is ready (James Richardson)
2012-07-07 04:38:58 +0100    remove duplicates from header (James Richardson)
2012-07-07 04:33:58 +0100    preserve order (James Richardson)
2012-07-07 04:33:27 +0100    remove duplicates from player name list (James Richardson)
2012-07-07 04:26:24 +0100    remove debugging (James Richardson)
2012-07-07 04:24:31 +0100    fix NPE (James Richardson)
2012-07-07 04:21:44 +0100    add updater defaults and change date format (James Richardson)
2012-07-07 04:17:16 +0100    fix registering permission to plugin root instead of command root (James Richardson)
2012-07-07 04:16:47 +0100    clean up (James Richardson)
2012-07-07 04:16:21 +0100    added delete command (James Richardson)
2012-07-07 03:57:44 +0100    various bug fixes (James Richardson)
2012-07-07 03:19:23 +0100    Missing generic (James Richardson)
2012-07-07 03:19:02 +0100    Missing import (James Richardson)