@@ -1,5 +1,6 @@
 Changelog for Alias (v1.1.2-SNAPSHOT)
 
+2012-08-06 00:35:55 +0100    will reimplement once database testing is complete (James Richardson)
 2012-08-06 00:30:24 +0100    update to AbstractPlugin and new frameworks (James Richardson)
 
 v1.1.1
